<resources>
    <string name="app_name">Hepi Plant</string>
    <string name="plant_name_holder">Nazwa rośliny</string>
    <string name="plants_list_title">Twoje rośliny</string>
    <string name="forum_date_holder">1 stycznia 2021</string>
    <string name="sales_offer_location_holder">Kraków</string>
    <string name="title">Tytuł</string>
    <string name="post_tags_holder">#tagi</string>
    <string name="body">Treść</string>
    <string name="post_comments_holder">0 komentarzy</string>
    <string name="post_price_holder">10 zł</string>
    <string name="username_holder">Username</string>
    <string name="comment_body_holder">To nie ma tak, że dobrze, albo że niedobrze. Gdybym miał powiedzieć, co cenię w życiu najbardziej, powiedziałbym, że ludzi. Ludzi, którzy podali mi pomocną dłoń, kiedy sobie nie radziłem, kiedy byłem sam, i co ciekawe, to właśnie przypadkowe spotkania wpływają na nasze życie.</string>
    <string name="add_comment">Dodaj komentarz</string>
    <string name="add">Dodaj</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="name_placeholder">Nazwa</string>
    <string name="id_placeholder">Id</string>
    <string name="watering_frequency_placeholder">Częstość podlewania</string>
    <string name="fertilizing_frequency_placeholder">Częstość nawożenia</string>
    <string name="misting_frequency_placeholder">Częstość zraszania</string>
    <string name="placement_placeholder">Stanowisko</string>
    <string name="soil_placeholder">Rodzaj gleby</string>
    <string name="category_placeholder">Kategoria</string>
    <string name="action">Akcja</string>
    <string name="edit_category_id">Id kategorii</string>
    <string name="save">Zapisz</string>
    <string name="category_delete_question">Czy na pewno chcesz usunąć kategorię o id </string>
    <string name="species_delete_question">Czy na pewno chcesz usunąć gatunek o id </string>
    <string name="tag_delete_question">"Czy chcesz usunąć tag o id "</string>
    <string name="grant_role_question">"Czy chcesz nadać rolę administratora użytkownikowi o id "</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="edit_category_title">Edytuj kategorię o id </string>
    <string name="add_category_title">Dodaj kategorię</string>
    <string name="edit_species_title">Edytuj gatunek o id </string>
    <string name="add_species_title">Dodaj gatunek</string>
    <string name="days_hint">dni</string>
    <string name="zero">0</string>
    <string name="sign_out">Wyloguj się</string>
    <string name="informations">Informacje</string>
    <string name="edit_post">Edytuj post</string>
    <string name="delete_post">Usuń post</string>
    <string name="user_profile">Profil użytkownika</string>
    <string name="edit_sales_offer">Edytuj ofertę</string>
    <string name="delete_sales_offer">Usuń ofertę</string>
    <string name="edit_plant">Edytuj roślinę</string>
    <string name="delete_plant">Usuń roślinę</string>
    <string name="details">Szczegóły</string>
    <string name="view_user_title">Szczegóły użytkownika o id</string>
    <string name="email_placeholder">Adres email</string>
    <string name="roles_placeholder">Role użytkownika</string>
    <string name="plants_count_placeholder">Liczba roślin</string>
    <string name="posts_count_placeholder">Liczba postów</string>
    <string name="sales_offers_count_placeholder">Liczba ofert sprzedaży</string>
    <string name="comments_count_placeholder">Liczba komentarzy</string>
    <string name="stats_user_title">Statystyki</string>
    <string name="none">Brak</string>
    <string name="grant_admin_role">Nadaj prawa adminstratora</string>
    <string name="filter_button">Filtruj</string>
    <string name="clean_button">Wyczyść</string>
    <string name="tag_tabs_title">Posty i oferty sprzedaży zawierające tag</string>
    <string name="no_posts_to_display">Brak postów do wyświetlenia</string>
    <string name="no_sales_offers_to_display">Brak ofert sprzedaży do wyświetlenia</string>
    <string name="no_plants_to_display">Brak roślin do wyświetlenia</string>
    <string name="app_authors">Autorzy aplikacji:</string>
    <string name="icon_authors">Ikonki wykorzystane w aplikacji pochodzą z witryny flaticon.com. Autorzy:</string>
    <string name="app_info_title">Informacje o aplikacji</string>
    <string name="app_copyright">Copyright © YEAR, HepiPlant </string>
    <string name="hour_of_notifications">Godzina:</string>
    <string name="change_hour">Zmień</string>
    <string name="hour_twelve">12:00</string>
    <string name="no_species">Brak przypisanego gatunku</string>
    <string name="no_category">Brak przypisanej kategorii</string>
    <string name="no_soil">Brak zalecanej gleby</string>
    <string name="no_location">Brak przypisanego pomieszczenia</string>
    <string name="no_placement">Brak zalecanego stanowiska</string>
    <string name="no_time">00:00:00</string>
    <string name="popup_message_archive">Czy na pewno wykonano to zadanie?</string>
    <string name="popu_message_event">Czy na pewno chcesz usunąć to wydarzenie?</string>
    <string name="popup_message_comment">Czy na pewno chcesz usunąć ten komentarz?</string>
    <string name="popup_message_post">Czy na pewno chcesz usunąć ten post?</string>
    <string name="popup_message_offer">Czy na pewno chcesz usunąć tą ofertę?</string>
    <string name="plant_name_view">Nazwa rośliny</string>
    <string name="species">Gatunek</string>
    <string name="location">Pomieszczenie</string>
    <string name="purchase_date">Data zakupu</string>
    <string name="category">Kategoria</string>
    <string name="soil_type">Rodzaj gleby</string>
    <string name="placement">Stanowisko</string>
    <string name="go_to_users_posts">Twoje posty i oferty sprzedaży</string>
    <string name="add_new_plant">Dodaj nową roślinę</string>
    <string name="three_dots">...</string>
    <string name="pick_date">Wybierz datę</string>
    <string name="save_date">Zapisz datę</string>
    <string name="edit_event">Edytuj wydarzenie</string>
    <string name="event_date">Data wydarzenia</string>
    <string name="archive">Archiwum</string>
    <string name="delete_plant_question">Czy na pewno chcesz usunąć tę roślinę?</string>
    <string name="author">Autor</string>
    <string name="add_post">Dodaj nowy post</string>
    <string name="tags">#Hasztagi</string>
    <string name="add_object_question">Co chcesz dodać?</string>
    <string name="post">Post</string>
    <string name="sales_offer">Ofertę sprzedaży</string>
    <string name="add_sales_offer">Dodaj nową ofertę sprzedaży</string>
    <string name="city">Lokalizacja</string>
    <string name="price">Cena</string>
    <string name="user_name">Nazwa użytkownika</string>
    <string name="notifications">Powiadomienia</string>
    <string name="change_data">Zmień dane</string>
    <string name="filter">Filtruj</string>
    <string name="x_sign">x</string>
    <string name="tag">Tag</string>
    <string name="event_name">Nazwa eventu</string>
    <string name="plant">Roślina</string>
    <string name="event_description">Opis wydarzenia</string>
    <string name="description">Opis</string>

</resources>
