<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryAddActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/includeToolbarCategoryAdd"/>

    <TextView
        android:id="@+id/categoryAddTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:text="@string/add_category_title"
        style = "@style/ListItemTitleFont" />

    <TextView
        android:id="@+id/categoryAddNameHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:text="@string/name_placeholder"
        style = "@style/DetailsFontTitle" />

    <EditText
        android:id="@+id/categoryNameAddEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_medium"
        style="@style/DetailsFontValue"/>

    <Button
        android:id="@+id/categoryAddSaveButton"
        style="@style/ButtonSmallAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:onClick="onSaveButtonClick"/>

</LinearLayout>
