<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeciesEditActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/includeToolbarSpeciesEdit"/>

    <TextView
        android:id="@+id/speciesEditTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:text="@string/edit_species_title"
        style = "@style/ListItemTitleFont" />

    <TextView
        android:id="@+id/speciesEditNameHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:text="@string/name_placeholder"
        style = "@style/DetailsFontTitle" />

    <EditText
        android:id="@+id/speciesNameEditEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_big"
        style="@style/DetailsFontValue"/>

    <Button
        android:id="@+id/speciesEditSaveButton"
        style="@style/ButtonSmallAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:onClick="onSaveButtonClick"/>

</LinearLayout>