<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CategoryListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/speciesHeaderLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/margin_big"
            android:layout_marginVertical="@dimen/margin_medium"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/speciesIdHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_placeholder"
                style="@style/DetailsFontValue"/>

            <Space
                android:layout_width="@dimen/spaceForIdHeader"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/speciesNameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_placeholder"
                style="@style/DetailsFontValue"/>

            <Space
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/speciesActionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action"
                style="@style/DetailsFontValue"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:paddingBottom="@dimen/spaceForBottomBar"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/speciesHeaderLinearLayout" />

        <Button
            android:id="@+id/speciesAddButton"
            style="@style/ButtonSmallAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_big"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>