<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginVertical="@dimen/margin_small"
    android:gravity="center_vertical"
    android:background="@drawable/rounded_rectangle_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_big"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/commentUsernameTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/username_holder"
                android:inputType = "textMultiLine"
                android:textAppearance="@style/ForumUsernameFont" />

            <Space
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/commentDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/forum_date_holder"
                android:textAppearance="@style/ForumDateFont" />

        </LinearLayout>

        <TextView
            android:id="@+id/commentBodyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_small"
            android:text="@string/comment_body_holder"
            android:textAppearance="@style/ListItemDescriptionFont" />
    </LinearLayout>

</FrameLayout>