<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlantViewActivity">

    <include
        android:id="@+id/includeToolbarPlantView"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="670dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/spaceForToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/PlantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="center_horizontal"
                style="@style/PageTitleFont"
                android:text="@string/plant_name_view"
                 />

            <ImageView
                android:id="@+id/plantImage"
                android:layout_width="@dimen/big_image_button_size"
                android:layout_height="@dimen/big_image_button_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/rounded_square"
                android:elevation="@dimen/elevation_3sp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/plant_icon"
                />

            <TextView
                android:id="@+id/SpeciesView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/species"
                style = "@style/DetailsFontTitle" />

            <TextView
                android:id="@+id/SpeciesValueView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/species"
                style = "@style/DetailsFontValue" />

            <TextView
                android:id="@+id/CategoryView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/category"
                style = "@style/DetailsFontTitle" />

            <TextView
                android:id="@+id/CategoryValueView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/category"
                style = "@style/DetailsFontValue" />

            <TextView
                android:id="@+id/WateringView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/watering_frequency_placeholder"
                style = "@style/DetailsFontTitle" />

            <TextView
                android:id="@+id/WateringValueView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_big"
                style = "@style/DetailsFontValue"
                android:layout_marginTop="@dimen/margin_small"/>

            <TextView
                android:id="@+id/FertilizingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/fertilizing_frequency_placeholder"
                style = "@style/DetailsFontTitle" />

            <TextView
                android:id="@+id/FertilizingValueView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_small"
                style = "@style/DetailsFontValue"/>

            <TextView
                android:id="@+id/MistingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/misting_frequency_placeholder"
                style = "@style/DetailsFontTitle" />

            <TextView
                android:id="@+id/MistingValueView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_small"
                android:text=""
                style = "@style/DetailsFontValue" />

            <TextView
                android:id="@+id/SoilView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/soil_type"
                style = "@style/DetailsFontTitle"
                 />

            <TextView
                android:id="@+id/SoilValueView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_small"
                style = "@style/DetailsFontValue" />

            <TextView
                android:id="@+id/LocationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/placement"
                style = "@style/DetailsFontTitle" />

            <TextView
                android:id="@+id/LocationValueView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_small"
                style = "@style/DetailsFontValue"/>

            <TextView
                android:id="@+id/PlacementView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/location"
                style = "@style/DetailsFontTitle" />

            <TextView
                android:id="@+id/PlacementValueView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_big"
                style = "@style/DetailsFontValue"
                android:layout_marginTop="@dimen/margin_small"
                android:text="" />

            <TextView
                android:id="@+id/DateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/purchase_date"
                style = "@style/DetailsFontTitle" />

            <TextView
                android:id="@+id/DateValueView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_big"
                style = "@style/DetailsFontValue"
                android:layout_marginTop="@dimen/margin_small" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>